# mbh-llvm-mos-game-genie-jam

./: CMakeLists.txt  CMakePresets.json  README.md  big-ish_letters.nss  big-ish_numbers.nss  lowercase_letters.nss  metaspr.nss  screen_gameover.nrle  screen_gameover.nss  screen_gameplay.nrle  screen_gameplay.nss  screen_title.nrle  screen_title.nss  small_letters_test.nss  smaller_letters.nss
ca65/: README.md  example.s
cmake/: add-ca65-folder.cmake  bootstrap-sdk.cmake  find-mos-compiler.cmake  llvm-mos-toolchain.cmake
src/: chr.c  font.inc  main.cpp  main.h  main.hpp  metasprites.h  metatile.cpp  metatile.hpp  nesheader.c  player.cpp  player.hpp  text_render.cpp  text_render.hpp
